fix responsive design and remove scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,12 @@ body {
   color: rgb(var(--foreground-rgb));
   background: rgba(var(--background-rgb));
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
